bcfEngine/bcfEngine.h



#ifndef __RDF_LTF_BCF_ENGINE_H
#define __RDF_LTF_BCF_ENGINE_H


#include "bcfTypes.h"

#ifdef __cplusplus
extern "C" {
#endif

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT BCFProject* bcfProjectCreate(const char* projectId = NULL);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT void bcfProjectDelete(BCFProject* project);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT const char* bcfErrorsGet(BCFProject* project, bool cleanLog);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfFileRead(BCFProject* project, const char* bcfFilePath);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfFileWrite(BCFProject* project, const char* bcfFilePath, BCFVersion version);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfSetEditor(BCFProject* project, const char* user, bool autoExtent);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT const char* bcfProjectIdGet(BCFProject* project);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT const char* bcfProjectNameGet(BCFProject* project);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfProjectNameSet(BCFProject* project, const char* name);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT const char* bcfEnumerationElementGet(BCFProject* project, BCFEnumeration enumeration, BCFIndex index);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfEnumerationElementAdd(BCFProject* project, BCFEnumeration enumeration, const char* element);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfEnumerationElementRemove(BCFProject* project, BCFEnumeration enumeration, const char* element);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT BCFIndex bcfTopicsCount(BCFProject* project);
    RDFBCF_EXPORT BCFIndex bcfTopicCreate(BCFProject* project, const char* type, const char* title, const char* status, const char* guid);
    RDFBCF_EXPORT bool bcfTopicRemove(BCFProject* project, BCFIndex topic);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT const char* bcfTopicGetGuid               (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetServerAssignedId   (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetTopicStatus        (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetTopicType          (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetTitle              (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetPriority           (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetCreationDate       (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetCreationAuthor     (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetModifiedDate       (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetModifiedAuthor     (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetDueDate            (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetAssignedTo         (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetDescription        (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT const char* bcfTopicGetStage              (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT int         bcfTopicGetIndex              (BCFProject* project, BCFIndex topic);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT bool bcfTopicSetServerAssignedId          (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetTopicStatus               (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetTopicType                 (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetTitle                     (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetPriority                  (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetDueDate                   (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetAssignedTo                (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetDescription               (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetStage                     (BCFProject* project, BCFIndex topic, const char* val);
    RDFBCF_EXPORT bool bcfTopicSetIndex                     (BCFProject* project, BCFIndex topic, int val);

    /// <summary>
    /// 
    /// </summary>
    RDFBCF_EXPORT BCFIndex bcfCommentsCount     (BCFProject* project, BCFIndex topic);
    RDFBCF_EXPORT BCFIndex bcfCommentCreate     (BCFProject* project, BCFIndex topic, const char* guid);
    RDFBCF_EXPORT bool bcfCommentRemove         (BCFProject* project, BCFIndex topic, BCFIndex comment);

    /// <summary>
    ///
    /// </summary>
    RDFBCF_EXPORT const char* bcfCommentGetGuid             (BCFProject* project, BCFIndex topic, BCFIndex comment);
    RDFBCF_EXPORT const char* bcfCommentGetDate             (BCFProject* project, BCFIndex topic, BCFIndex comment);
    RDFBCF_EXPORT const char* bcfCommentGetAuthor           (BCFProject* project, BCFIndex topic, BCFIndex comment);
    RDFBCF_EXPORT const char* bcfCommentGetModifiedDate     (BCFProject* project, BCFIndex topic, BCFIndex comment);
    RDFBCF_EXPORT const char* bcfCommentGetModifiedAuthor   (BCFProject* project, BCFIndex topic, BCFIndex comment);
    RDFBCF_EXPORT const char* bcfCommentGetComment          (BCFProject* project, BCFIndex topic, BCFIndex comment);
    RDFBCF_EXPORT BCFIndex    bcfCommentGetViewPoint        (BCFProject* project, BCFIndex topic, BCFIndex comment);

    /// <summary>
    ///
    /// </summary>
    RDFBCF_EXPORT bool bcfCommentSetComment     (BCFProject* project, BCFIndex topic, BCFIndex comment, const char* text);
    RDFBCF_EXPORT bool bcfCommentSetViewPoint   (BCFProject* project, BCFIndex topic, BCFIndex comment, BCFIndex viewPoint);

#ifdef __cplusplus
} //extern "C"
#endif

#endif // __RDF_LTF_BCF_ENGINE_H